--- a/src/views/cart.ejs
+++ b/src/views/cart.ejs
@@ -3,7 +3,7 @@
 <head>
     <%- include ('./partials/head.ejs') %>
     <link rel="stylesheet" href="css/cart.css">
-    <title></title>
+    <title>HANGAR</title>
 </head>
 
 <body>
