--- a/src/views/user/loggin.ejs
+++ b/src/views/user/loggin.ejs
@@ -1,125 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-rel="stylesheet" />
-    <link rel="stylesheet" href="css\styleloggin.css">
+
+    <%- include ('../partials/head.ejs') %>
+        <link rel="stylesheet" href="css/styleloggin.css">
         <title>HANGAR</title>
+
 </head>
-<header class="head">
+<%- include ('../partials/header.ejs') %>
 
-    <div class="promociones">
-        <p>3 y 6 cuotas sin interes - 10% de descuento con transferencia</p>
-    </div>
-    <div class="logo-img">
-        <div class="logo"> <a href="/"><img id="img-principal" width="100%" src="./imagenes/logo-header.jpg" alt="HOME&DECO"></a>
+    <body>
+        <div class="container">
+
+            <form method="post" action=" /contacto">
+
+                <h2>Iniciar sesión</h2>
+                <div class="form-body">
+                    <i class="fas fa-user"></i>
+                    <input class="controls" type="text" placeholder="Usuario">
+                </div>
+                <div class="form-body">
+                    <i class="fas fa-lock"></i>
+                    <input class="controls" type="password" value="" placeholder="Contraseña">
+                </div>
+                <div class="form-body">
+                    <input class="buttons" type="submit" Value="Ingresar">
+                </div>
         </div>
-    </div>
 
-    <div class="carrito_login"> <a href="/cart"><i class="fas fa-shopping-basket"></i></a> </div>
-    <div class="user"> <a href="/loggin"> <i class="far fa-user-circle"></i> </a> </div>
-    <div class="registro-home"> <a href="/register"> <i class="far fa-address-card"></i> </a> </div>
-    
-       
+        <div class="contra">
+            <a href="#">¿Olvido su contraseña?</a>
+        </div>
 
-    </div>
-  
-<body>
-    <div class="container">
-        
-    <form method="post" action=" /contacto"> 
-                   
-            <h2>Iniciar sesión</h2>   
-            <div class="form-body">
-            <i class= "fas fa-user"></i>
-            <input class="controls" type="text" placeholder="Usuario">
-            </div>
-            <div class="form-body">
-            <i class= "fas fa-lock"></i> 
-    <input class="controls" type="password" value= ""placeholder="Contraseña">
-</div> 
-<div class="form-body">
-    <input class="buttons"  type="submit" Value="Ingresar">
-</div>
-</div>
-       
-               <div class="contra">
-               <a href="#">¿Olvido su contraseña?</a> 
-               </div>
-            
-    
-    <div class="login"> <br>
-        <h2>Ingresar con red social</h2> <br>
-    </div>  
+
+        <div class="login"> <br>
+            <h2>Ingresar con red social</h2> <br>
+        </div>
         <div class="login-items">
-          <a href="#"class="fb"><i class="fab fa-facebook"></i></a>
-          <a href="#" class="tw"><i class="fab fa-twitter"></i></a>
-          <a href="#" class="correo"><i class="fas fa-envelope-square"></i></a><br>
+            <a href="#" class="fb"><i class="fab fa-facebook"></i></a>
+            <a href="#" class="tw"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="correo"><i class="fas fa-envelope-square"></i></a><br>
         </div>
         </div>
-    </form>
-</body><br>
-<footer class="pie">
-    <div class="informacion">
+        </form>
+    </body><br>
+    <%- include ('../partials/footer.ejs') %>
 
-
-        <div class="info-flex">
-            <h4>INFORMACION</h4>
-            <a href="/preguntasFrecuentes">
-                <p class="piePag"> Preguntas frecuentes </p>
-            </a>
-            <a href="/Cambios">
-                <p class="piePag"> Cambios y devoluciones </p>
-            </a>
-            <a href="/envios">
-                <p class="piePag"> Envios </p>
-            </a>
-        </div>
-
-
-
-
-        <div class="contacto-flex">
-            <h4>CONTACTO</h4>
-            <a href="/info">
-                <p class="piePag"><i class="fas fa-map-marker-alt"></i> Ubicacion </p>
-            </a>
-            <a href="/info">
-                <p class="piePag"> <i class="fab fa-whatsapp"></i> Telefono </p>
-            </a>
-            <a href="/info">
-                <p class="piePag"> <i class="far fa-envelope"></i> Email </p>
-            </a>
-        </div>
-
-
-        <div class="new-flex">
-            <h4>NEWSLETTER</h4>
-            <h6 class="newsletter"> Suscribite para recibir novedades!</h6>
-            <form action="/" method="get">
-                <input class="suscribite" type="email" name="email" placeholder="ejemplo@gmail.com">
-                <button class="suscrib" type="submit"> Suscribirse </button>
-
-            </form>
-        </div>
-
-        <div class="redes-flex">
-            <h4>NUESTRAS REDES</h4>
-            <a href="http://facebook.com"> <i class="fab fa-facebook-square"></i> </a>
-            <a href="http://instagram.com"> <i class="fab fa-instagram"></i> </a>
-        </div>
-
-    </div>
-    <div class="copyright">
-        <p> Copyright © 2022 Hangar - Home & Deco. </p>
-    </div>
-
-</footer>
-
-</body>
+        </body>
 
 </html>
 
