--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -3,7 +3,7 @@
     margin: auto;
     margin-top: 100px;
     margin-block-end: 10px;
-    background-color: #f7d6eb;
+    background-color: antiquewhite;
     box-shadow: 0em 0 0.4em olive;
 }
 
@@ -15,7 +15,7 @@ font-weight: normal;
 #tablacabecera{
 padding: 5px;
 height: 70px;
-background-color:  #e2725b84 ;
+background-color:  #e2725b70;
 }
 
 #buttons-container{
@@ -34,7 +34,7 @@ background-color:  #e2725b84 ;
 #buttons-container > button{
     margin-left: 20px;
     margin-right: 20px;
-    background-color: #f7d6eb;
+    background-color: #e2725b77;
     border: 0px;
     padding: 5px;
     border-radius: 10px;
@@ -42,7 +42,7 @@ background-color:  #e2725b84 ;
 }
 
 #refresh-cart{
-    background-color: #e2725b84;
+    background-color:antiquewhite ;
     margin: auto;
     margin-top: 15px;
     padding: 5px;
@@ -108,7 +108,7 @@ justify-content: space-around;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    background-color: #f7d6eb;
+    background-color: antiquewhite;
     height: 165px;
     margin: 2px;
     
@@ -126,14 +126,14 @@ justify-content: space-around;
 }
 
 #regalo>div> button:hover{
- background:  antiquewhite;
+ background:  #cdc1b3;;
 
 }
 
 
 #precios-envio >tbody> tr> td{
 width: 50%;
-background-color: #f7d6eb;
+background-color: antiquewhite;
 }
 
  #precios-envio{
@@ -167,5 +167,7 @@ table{
    width: 75px;
    margin-left: 80px;
  }
+ 
 }
+
 
