--- a/src/views/cart.ejs
+++ b/src/views/cart.ejs
@@ -14,9 +14,11 @@
         <div style="max-width: 100vw; overflow: auto">  
         <table id="tabla">
             <tr id="tablacabecera">
+                
                 <th>
-
+                   Foto 
                 </th>
+
                 <th>
                     Producto 
                 </th>
