servicios de admin- cargar y modificar/eliminar

--- a/src/views/admin/deletteProduct.ejs
+++ b/src/views/admin/deletteProduct.ejs
@@ -13,7 +13,7 @@
     <section class="container">
         <form class = "cargar-producto">
         <div class =" encabezado">
-            <h1>Cargar Producto</h1>
+            <h1>Eliminar / Modificar Producto</h1>
         </div>
         <div class = "name">
             <label for="nombre">Nombre del producto</label> 
@@ -39,7 +39,7 @@
             <label for="precio">Precio del producto</label> 
             <input id="precio" type="number" >
         </div>
-        <button>CARGAR</button>
+        <button>ELIMINAR / MODIFICAR</button>
 
         </form>
     </section>
