botones de  admin- cargar y modificar/eliminar

--- a/src/views/product/product.ejs
+++ b/src/views/product/product.ejs
@@ -59,8 +59,13 @@
                         </div>
                     </div>
                 </div>
+                
                 <div class = "container-button">
-                    <button class="button-carrito"><span>AGREGAR AL CARRITO</span></button>
+                    <a href="/cart"><button class="button-carrito"><span>AGREGAR AL CARRITO</span></button></a>
+                </div>
+                <div class = "button-admin">
+                    <a href="/admin/createProduct"><button class="button-cargar"><span>CARGAR PRODUCTO</span></button></a>
+                    <a href="/admin/deletteProduct"><button class="button-modificar-eliminar"><span>ELIMINAR / MODIFICAR PRODUCTO</span></button></a>
                 </div>
                 <div class = "medios-envio">
                     <p><i class="fas fa-shipping-fast"></i> MEDIOS DE ENVIO</p>
