--- a/public/css/product.css
+++ b/public/css/product.css
@@ -89,18 +89,18 @@ h1{
     height: 15px;
     margin-top: 2px;
     padding-left: 7px;
-    
 }
 
 .container-button{
+    width: 100%;   
+}
+.button-admin{
     width: 100%;
     display: flex;
     justify-content: space-around;
-
 }
 
 .button-carrito{
-
     display: inline-flex;
     margin: 10px;
     width: 100%;
@@ -125,10 +125,8 @@ h1{
     left: -150%;
     top: 0;
     transition: .5s ease all;
-    
     border-top:48px solid #FFFDD0;
     border-right:48px solid transparent;
-    
 }
 
 .button-carrito:hover::after{
@@ -138,6 +136,20 @@ h1{
     position: relative;
     z-index: 2;
     transition: .3s ease all;
+}
+
+.button-cargar, .button-modificar-eliminar{
+    margin: 10px;
+    width: 100%;
+    height: 40px;
+    background-color: #EBB5D6;  
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.button-cargar:hover, .button-modificar-eliminar:hover{
+    background-color: #FFFDD0;
 }
 
 .build-credit-card, .descuento-efectivo{
