agregando talle a botones - cargar y modificar/eliminar

--- a/src/views/admin/createproduct.ejs
+++ b/src/views/admin/createproduct.ejs
@@ -35,6 +35,16 @@
             <label for="color">Color del producto</label> 
             <input id="color" type="color"> 
         </div>
+
+        <div class = "product-tam">
+            <label for="tamanio">Tamaño</label>
+            <select  class = "button-tam" name = "tamanio">
+                <option disabled="">Seleccione una Opcion</option>
+                        <option value="ESTANDAR">ESTANDAR</option>
+                        <option value="GRANDE">GRANDE</option>
+                        <option value="CHICO/A">CHICO/A</option>
+            </select>
+        </div>
         <div class = "price">
             <label for="precio">Precio del producto</label> 
             <input id="precio" type="number" >
