--- a/src/views/admin/createproduct.ejs
+++ b/src/views/admin/createproduct.ejs
@@ -3,7 +3,7 @@
 <head>
     
     <%- include ('../partials/head.ejs') %>
-    <link rel="stylesheet" href="/css/createproduct.css">
+    <link rel="stylesheet" href="/css/createProduct.css">
     <title>HANGAR</title>
 
 </head> 
@@ -23,7 +23,7 @@
             <label for="descripcion">Descripcion del producto</label> 
             <textarea id="descripcion" type="text" > </textarea>
         </div>
-        <div class = "img-product">
+        <div class = "img-cargar-product">
             <label for="imagen">Imagen del producto</label> 
             <input id="imagen" type="file" >
         </div>
@@ -49,7 +49,7 @@
             <label for="precio">Precio del producto</label> 
             <input id="precio" type="number" >
         </div>
-        <button>CARGAR</button>
+        <button class = "button-create">CARGAR</button>
 
         </form>
     </section>
