Creacion detail, productList, carpeta data con archivo json y modularizamos register/login

--- a/src/views/product/detail.ejs
+++ b/src/views/product/detail.ejs
@@ -18,28 +18,28 @@
                 <div class = "img-producto-principal">
                     <img width = "100" class="img-principal" src="imagenes/lampara1.jpg" alt="Lampara" ></img>
                 </div>
-                <div class = "img-productos-secundaria">
+                <!--<div class = "img-productos-secundaria">
                     <div><img width="100" height="100" src="imagenes/lampara2.jpg" alt="Lampara" class="product_img"></img></div>
                     <div><img width="100" height="100" src="imagenes/lampara3.jpg" alt="Lampara" class="product_img"></img></div>
                     <div><img width="100" height="100" src="imagenes/lampara4.jpg" alt="Lampara" class="product_img"></img></div>
                     <div><img width="100" height="100" src="imagenes/lampara5.jpg" alt="Lampara" class="product_img"></img></div>
                     
                     
-                </div>
+                </div>-->
             </div>
             <div class="main-article">
                 <div class = "flex-conteiner-detalle">
-                    <h1 class = "titulo">LAMPARA</h1>
-                    <p class = "precio">$ 20.000</p>
+                    <h1 class = "titulo"></h1>
+                    <p class = "precio"></p>
                     <div class="build-credit-card">
                         <p><i class="far fa-credit-card"></i></p>
-                        <strong class = "cuotas">6</strong>
+                        <strong class = "cuotas"> CUOTAS</strong>
                         <p>CUOTAS SIN INTERES</p>
-                        <strong class = "precio-cuotas">$900,50</strong>
+                        <strong class = "precio-cuotas"> PRECIO / CUOTAS</strong>
                     </div>
                     <div class = "descuento-efectivo">
                         <p><i class="far fa-money-bill-alt"></i></p>
-                        <strong class = "porc-descuento">10 % de descuento</strong>
+                        <strong class = "porc-descuento"> discount % </strong>
                         <p>pagando en efectivo</p>
                     </div>
                     <div class= "container-cantidad">
@@ -81,16 +81,7 @@
                 </div>
                 <div class = "detalle">
                     <h3><strong>DESCRIPCION</strong></h3>
-                    <p>Lámpara colgante
-                        
-                        Material: MDF
-                        Medidas: 
-                        -Chica: Alto: 25cm | Diámetro inferior: 20cm | Diámetro superior: 12cm.
-                        -Mediana: Alto: 25cm | Diámetro inferior: 30cm | Diámetro superior: 17cm
-                        -Grande: Alto: 25cm | Diámetro inferior: 40cm | Diámetro superior: 21cm
-                        -XL: Alto: 50cm | Diámetro: 60cm.
-                        
-                        Todas las medidas incluyen Cable + Florón: 100 cm</p>
+                   
                 </div>
             </div>
         </div>
