--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -5,13 +5,13 @@
             <p>3 y 6 cuotas sin interes - 10% de descuento con transferencia</p>
         </div>
         <div class="logo-img">
-            <div class="logo"> <a href="/"><img id="img-principal" width="100%" src="./imagenes/logo-header.jpg" alt="HOME&DECO"></a>
+            <div class="logo"> <a href="/"><img id="img-principal" width="100%" src="/imagenes/logo-header.jpg" alt="HOME&DECO"></a>
             </div>
         </div>
 
         <div class="carrito_login"> <a href="/cart"><i class="fas fa-shopping-basket"></i></a> </div>
-        <div class="user"> <a href="/loggin"> <i class="far fa-user-circle"></i> </a> </div>
-        <div class="registro-home"> <a href="/register"> <i class="far fa-address-card"></i> </a> </div>
+        <div class="user"> <a href="/auth/login"> <i class="far fa-user-circle"></i> </a> </div>
+        <div class="registro-home"> <a href="/auth/register"> <i class="far fa-address-card"></i> </a> </div>
         <!-- BARRA BUSQUEDA -->
 
         <div class="flexsearch">
