--- a/src/views/user/loggin.ejs
+++ b/src/views/user/loggin.ejs
@@ -4,7 +4,7 @@
 <head>
 
     <%- include ('../partials/head.ejs') %>
-        <link rel="stylesheet" href="css/styleloggin.css">
+        <link rel="stylesheet" href="/css/styleloggin.css">
         <title>HANGAR</title>
 
 </head>
