--- a/src/views/user/register.ejs
+++ b/src/views/user/register.ejs
@@ -4,7 +4,7 @@
     <head>
 
         <%- include ('../partials/head.ejs') %>
-            <link rel="stylesheet" href="css/register.css">
+            <link rel="stylesheet" href="/css/register.css">
             <title>HANGAR</title>
     
     </head>
