Correcion de rutas, armado de metodos, modificacion de vistas a dinamicas y unificacion de archivo admin a archivo product

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,17 @@
   
 }
 
+.nuestroProd{
+    color: gray;
+}
+.nuestroProd:hover{
+    cursor: pointer;
+    text-decoration: underline gray
+}
+
+
+
+
 .linea{
     align-self: center;
     margin: 15px;
