--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -3,7 +3,7 @@
 
     <head>
         <%- include ('./partials/head.ejs') %>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="/css/style.css">
         <title>HANGAR</title>
     </head>
 
@@ -17,7 +17,8 @@
             <div class="linea">
                 ------------------------
             </div>
-            <p> PRODUCTOS DESTACADOS  </p>
+            <a href='/product/' class="nuestroProd">
+                 <p > NUESTROS PRODUCTOS  </p> </a>
             <div class="linea">
                 ------------------------
             </div>
@@ -29,7 +30,7 @@
                     <p class="descripcion"> Lampara Atenas </p>
                     <p class="precio">$5.000 </p>
                     <div class="container-button">
-                        <a class="boton-lampara" href="/product"> <button class="button-carrito-home"><span>Ver producto</span></button> </a>
+                        <a class="boton-lampara" href="/product/"> <button class="button-carrito-home"><span>Ver producto</span></button> </a>
                     </div>
                 </div>
 
