--- a/src/views/productList.ejs
+++ b/src/views/productList.ejs
@@ -2,29 +2,29 @@
 <html lang="en">
 
     <head>
-        <%- include ('../partials/head.ejs') %>
-        <link rel="stylesheet" href="css/style.css">
+        <%- include ('./partials/head.ejs') %>
+        <link rel="stylesheet" href="/css/style.css">
         <title>HANGAR</title>
     </head>
 
 <body>
-    <%- include ('../partials/header.ejs') %>
+    <%- include ('./partials/header.ejs') %>
     <main>
         
         <div class="img_destacados">
             <div class="productos">
-                <img width="170px" height="200px" src="./imagenes/lampara1.jpg" alt="imagen producto1 ">
+                <img width="170px" height="200px" src="/./imagenes/lampara1.jpg" alt="imagen producto1 ">
                 <div class="info">
                     <p class="descripcion"> Lampara Atenas </p>
                     <p class="precio">$5.000 </p>
                     <div class="container-button">
-                        <a class="boton-lampara" href="/product"> <button class="button-carrito-home"><span>Ver producto</span></button> </a>
+                        <a class="boton-lampara" href="/product/"> <button class="button-carrito-home"><span>Ver producto</span></button> </a>
                     </div>
                 </div>
 
             </div>
             <div class="productos">
-                <img width="170px" height="200px" src="./imagenes/llavero.jpeg" alt="imagen producto2">
+                <img width="170px" height="200px" src="/./imagenes/llavero.jpeg" alt="imagen producto2">
                 <div class="info">
                     <p class="descripcion"> Llavero Cloe </p>
                     <p class="precio">$2.500 </p>
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="productos">
-                <img width="170px" height="200px" src="./imagenes/bandeja.jpeg" alt="imagen producto3">
+                <img width="170px" height="200px" src="/./imagenes/bandeja.jpeg" alt="imagen producto3">
                 <div class="info">
                     <p class="descripcion"> Bandeja iris </p>
                     <p class="precio">$1.800 </p>
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="productos">
-                <img width="170px" height="200px" src="./imagenes/cubrecama.jpeg" alt="imagen producto 4">
+                <img width="170px" height="200px" src="/./imagenes/cubrecama.jpeg" alt="imagen producto 4">
                 <div class="info">
                     <p class="descripcion"> Manta pompeya </p>
                     <p class="precio">$20.000 </p>
@@ -55,7 +55,7 @@
             </div>
 
             <div class="productos" id="imagen5">
-                <img width="170px" height="200px" src="./imagenes/recibidor.jpeg" alt="imagen producto 4">
+                <img width="170px" height="200px" src="/./imagenes/recibidor.jpeg" alt="imagen producto 4">
                 <div class="info">
                     <p class="descripcion"> Recibidor dallas </p>
                     <p class="precio">$20.000 </p>
@@ -70,7 +70,7 @@
 
     </main>
 
-    <%- include ('../partials/footer.ejs') %>
+    <%- include ('./partials/footer.ejs') %>
 
 </body>
 
