--- a/public/css/deletteProduct.css
+++ b/public/css/deletteProduct.css
@@ -10,7 +10,7 @@
 
 
 
-.name, .description, .price, .img-eliminar-product, .category, .product-color, .product-tam{
+.name, .description, .price, .img-eliminar-product, .category, .discount, .product-tam{
     margin: 10px;
     padding: 5px;
     display: flex;
