--- a/src/views/createproduct.ejs
+++ b/src/views/createproduct.ejs
@@ -30,8 +30,12 @@
                     <input id="imagen" type="file" name="image">
                 </div>
                 <div class="category">
-                    <label for="categoria">Categorias del producto</label>
-                    <input id="categoria" type="text" name="categoria">
+                    <label for="category" class="form-label">Categoría:</label>
+                    <select name="category" id="category" class="form-input">
+                        <option value="">Elegí</option>
+                        <option value="in-sale">En oferta</option>
+                        <option value="visited" >Últimos visitados</option>
+                    </select>
                 </div>
 
                 <div class="discount">
