Modificacion de app.set(views, src/views) para funcionamiento de rutas sin path resolve

--- a/src/views/editProduct.ejs
+++ b/src/views/editProduct.ejs
@@ -78,7 +78,7 @@
 
             </form>
             <div class="box-buttonDelete">
-                <form class="eliminar-producto" action="/product/<%= productToFind.id %>?_method=delette" method="post">
+                <form class="eliminar-producto" action="/product/<%= productToFind.id %>?_method=delete" method="post">
 
                     <button type="submit" class="delete"
                         onclick="return confirm('Estas seguro que deseas eliminar este producto?')"> ELIMINAR </button>
