--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -13,6 +13,8 @@
         <div class="imagen-principal-main">
                 <img class="imagen-main" src="./imagenes/IMAGEN-PORTADA.jpg" />
         </div>
+        
+       
         <div class="p_destacados">
             <div class="linea">
                 ------------------------
@@ -23,13 +25,15 @@
                 ------------------------
             </div>
         </div>
+        
         <div class="img_destacados">
             <% product.forEach(element => { %>
                 <div class="productos">
+                    <p class=""> HOT SALE!! </p>
                    <img width="170px" height="200px" src="<%= element.image%>" alt="imagen producto1 ">
                    <div class="info">
                        <p class="descripcion"> <%= element.name%> </p>
-                       <p class="precio"><%= element.price%> </p>
+                       <p class="precio">$ <%= element.price%> </p>
                        <div class="container-button">
                            <a class="boton-lampara" href="/product/detail/<%= element.id%>"> <button class="button-carrito-home"><span>Ver producto</span></button> </a>
                        </div>
