--- a/src/views/productList.ejs
+++ b/src/views/productList.ejs
@@ -17,7 +17,7 @@
                 <img width="170px" height="200px" src="<%= element.image%>" alt="imagen producto1 ">
                 <div class="info">
                     <p class="descripcion"> <%= element.name%> </p>
-                    <p class="precio"><%= element.price%> </p>
+                    <p class="precio">$<%= element.price%> </p>
                     <div class="container-button">
                         <a class="boton-lampara" href="/product/detail/<%= element.id%>"> <button class="button-carrito-home"><span>Ver producto</span></button> </a>
                     </div>
