se arreglo el error de las rutas del register, pero sigue tirando error cuando se crea un registro

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -10,8 +10,8 @@
         </div>
 
         <div class="carrito_login"> <a href="/cart"><i class="fas fa-shopping-basket"></i></a> </div>
-        <div class="user"> <a href="/auth/login"> <i class="far fa-user-circle"></i> </a> </div>
-        <div class="registro-home"> <a href="/auth/register"> <i class="far fa-address-card"></i> </a> </div>
+        <div class="user"> <a href="/users/login"> <i class="far fa-user-circle"></i> </a> </div>
+        <div class="registro-home"> <a href="/users/register"> <i class="far fa-address-card"></i> </a> </div>
         <!-- BARRA BUSQUEDA -->
 
         <div class="flexsearch">
