--- a/src/views/user/register.ejs
+++ b/src/views/user/register.ejs
@@ -12,7 +12,7 @@
 <body>
     <%- include ('../partials/header.ejs') %>
    <body>
-    <form action="./register" method="post" class="registro" > 
+    <form action="/users/register" method="post" class="registro"  enctype="multipart/form-data" > 
         <h1 id="tituloform">Regístrate</h1>
         <label id="nombre">Escriba su nombre: <input type="text" class="form_input" id="nombre" name="nombre" placeholder="Ej: Federico"/></label>
         <label id="apellido">Escriba su apellido: <input type="text" class="form_input" id="apellido" name="apellido" placeholder="Ej: Martinez"/></label>
