--- a/public/css/register.css
+++ b/public/css/register.css
@@ -31,7 +31,7 @@
 #tituloform{
     text-align: center;
 }
-form #nombre{
+form #name{
     border-radius: 5px;
     width:75%;
  
@@ -74,6 +74,13 @@ form #Contraseña{
     width: 75%;
     
 }
+
+.error-registro{
+    color: red;
+    font-size: 12px;
+}
+
+
 @media(min-width: 576px){
 
   .linea{
