--- a/src/views/user/register.ejs
+++ b/src/views/user/register.ejs
@@ -12,14 +12,33 @@
 <body>
     <%- include ('../partials/header.ejs') %>
    <body>
+
+
     <form action="/users/register" method="post" class="registro"  enctype="multipart/form-data" > 
         <h1 id="tituloform">Regístrate</h1>
-        <label id="nombre">Escriba su nombre: <input type="text" class="form_input" id="nombre" name="nombre" placeholder="Ej: Federico"/></label>
+        <label id="name">Escriba su nombre: <input type="text" class="form_input" id="name" name="name" placeholder="Ej: Federico"/></label>
+       
+        <% if(locals.errors && errors.fullName) { %>
+     <div class="error-registro">
+        <%= errors.fullName.msg %> 
+     </div>
+        <% } %> 
+        
         <label id="apellido">Escriba su apellido: <input type="text" class="form_input" id="apellido" name="apellido" placeholder="Ej: Martinez"/></label>
 
         <label id="email">Correo electrónico: <input type="email" class="form_input" id="email" name="email" placeholder="Ej: federico@gmail.com"/></label>
+        <% if(locals.errors && errors.email) { %>
+            <div class="error-registro">
+               <%= errors.email.msg %> 
+            </div>
+               <% } %> 
         <label id="fnac">Fecha de nacimiento: <input type="date" class="form_input" id="fnac" name="fnac" /></label>
         <label id="Contraseña">Contraseña: <input type="password" class="form_input" id="Contraseña" name="Contraseña"/></label>
+        <% if(locals.errors && errors.password) { %>
+            <div class="error-registro">
+               <%= errors.password.msg %> 
+            </div>
+               <% } %> 
         <label id="imagen">Imagen de perfil: <div> <input type="file" class="form_input" id="imagen" name="imagenUsuario"/> </div>  </label>
        
         <input type="submit" class="boton_enviar" value="Crear">
