--- a/src/views/user/register.ejs
+++ b/src/views/user/register.ejs
@@ -16,23 +16,26 @@
 
     <form action="/users/register" method="post" class="registro"  enctype="multipart/form-data" > 
         <h1 id="tituloform">Regístrate</h1>
-        <label id="name">Escriba su nombre: <input type="text" class="form_input" id="name" name="name" placeholder="Ej: Federico"/></label>
+        <label id="fullName">Escriba su nombre completo: <input type="text" class="form_input id="fullName" name="fullName" /></label>
        
         <% if(locals.errors && errors.fullName) { %>
      <div class="error-registro">
         <%= errors.fullName.msg %> 
      </div>
         <% } %> 
-        
-        <label id="apellido">Escriba su apellido: <input type="text" class="form_input" id="apellido" name="apellido" placeholder="Ej: Martinez"/></label>
 
-        <label id="email">Correo electrónico: <input type="email" class="form_input" id="email" name="email" placeholder="Ej: federico@gmail.com"/></label>
+        <label id="email">Correo electrónico: <input type="email" class="form_input" id="email" name="email" /></label>
         <% if(locals.errors && errors.email) { %>
             <div class="error-registro">
                <%= errors.email.msg %> 
             </div>
                <% } %> 
         <label id="fnac">Fecha de nacimiento: <input type="date" class="form_input" id="fnac" name="fnac" /></label>
+        <% if(locals.errors && errors.fnac) { %>
+            <div class="error-registro">
+               <%= errors.fnac.msg %> 
+            </div>
+               <% } %> 
         <label id="Contraseña">Contraseña: <input type="password" class="form_input" id="Contraseña" name="Contraseña"/></label>
         <% if(locals.errors && errors.password) { %>
             <div class="error-registro">
