--- a/public/css/register.css
+++ b/public/css/register.css
@@ -53,7 +53,7 @@ form #fnac{
     padding: 5px;
     
 }
-form #Contraseña{
+form #password{
     width: 75%;
     text-align: center;
     font-weight: bold;
@@ -111,9 +111,7 @@ form #Contraseña{
     .logo{
         width: 100%;
     }
-.registro{
-        height: 420px;
-    }
+
 }
 @media(min-width: 992px){
   .productos{
